--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="resources/css/stylesheet.css" type="text/css" rel="stylesheet"
-    <meta charset="utf-8">
-    <title>Excursion</title>
+    <link href="resources/css/style.css" type="text/css" rel="stylesheet">
+      <title>Excursion</title>
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
+    <h3>Download Excursion (Coming Soon!)</h3>
+    <video src="resources/excursion.mp4">Video Not Supported</video>
+    <h1>Your personal travel guide</h1>
+    <h2>Excursion remembers places you like, and recommends new points of interest around you.</h2>
+    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg"/>
+  </br>
+    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png"/>
+<h1>Coming Soon for iPhone and Android</h1>
+<h3>Download Excursion (Coming soon!)
+  <h2>(c)Excursion</h2>
     </body>
 </html>
