Update HOME, Style and Video

--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
       <title>Excursion</title>
   </head>
   <body>
-    <h1>Discover hidden places in the world around you</h1>
-    <h3>Download Excursion (Coming Soon!)</h3>
-    <video src="resources/excursion.mp4">Video Not Supported</video>
-    <h1>Your personal travel guide</h1>
-    <h2>Excursion remembers places you like, and recommends new points of interest around you.</h2>
-    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg"/>
+    <h1 id="headline">Discover hidden places in the world around you</h1>
+    <h4 id="download">Download Excursion (Coming Soon!)</h3>
+    <video id="video" src="resources/excursion.mp4">Video Not Supported</video>
+    <h2 id="smallhead">Your personal travel guide</h1>
+    <h3 id="subhead">Excursion remembers places you like, and recommends new points of interest around you.</h2>
+    <img id="image" src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg"/>
   </br>
-    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png"/>
-<h1>Coming Soon for iPhone and Android</h1>
-<h3>Download Excursion (Coming soon!)
-  <h2>(c)Excursion</h2>
+    <img id="image" src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png"/>
+<h2 id="smallhead">Coming Soon for iPhone and Android</h1>
+<h4 id=download>Download Excursion (Coming soon!)</h4>
+  <h3  id="right">(c)Excursion</h3>
+</div>
     </body>
 </html>
